--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-person_attribute/net/__pycache__/
 *.mp4
 rekall/data/*
 detectron2/demo/*.mp4
@@ -12,3 +11,4 @@ data/bdd100k/videos/
 rekall/tutorials/*/
 person_attribute/checkpoints/*
 *.pkl
+__pycache__/
