--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
+*.csv filter=lfs diff=lfs merge=lfs -text
 postgres/obj_clevrer.csv filter=lfs diff=lfs merge=lfs -text
 postgres/obj_trajectories.csv filter=lfs diff=lfs merge=lfs -text
